# seichi-ranking-bff

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml  ci.yaml  docker-build-test.yaml  docker-build.yaml  docker-push.yaml  test-and-build.yaml
docs/: api.md
src/: app_models.rs  app_state.rs  config.rs  ext.rs  handler.rs  lib.rs  main.rs  model.rs  models.rs  test.rs
src/config/: config.rs
src/ext/: buffered.rs
src/handler/: ranking.rs
src/handler/ranking/: periodic.rs  player.rs
src/handler/search/: player.rs
src/handlers/: mod.rs  presentation_models.rs  ranking.rs
src/test/: read_config.rs
