[package]
name = "seichi-ranking-bff"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1", features = ["rustls"] }
anyhow = "1.0.69"
async-lock = "2.6.0"
async-trait = "0.1.61"
chrono = { version = "0.4.23", features = ["serde"] }
envy = "0.4.2"
fern = { version = "0.6.1", features = ["colored"] }
log = "0.4.17"
once_cell = "1.17.0"
qstring = "0.7.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros"] }
uuid = { version = "1.3.0", features = ["serde"] }
